demo/lab-docker-k8s/03-k8s-apps/web/deployment-svc-ingres.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: webdeployment
  namespace: devoxx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        pod: webPOD
    spec:
      containers:
        - name: webcontainer
          image: nmengin/web:devoxx
          imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  name: webservice
  namespace: devoxx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: websp
  selector:
    pod: webPOD

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webingress
  namespace: devoxx
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
  - host: lab.nicolas.containous.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: webservice
          servicePort: 80
