demo/lab-docker-k8s/03-k8s-apps/web/deployment-svc-ingress.yml
# tag::deployment[]
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: web-full-deployment
  namespace: devoxx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        guilde: web
        faction: server
    spec:
      containers:
        - name: web-full-container
          image: nmengin/web:devoxx
          imagePullPolicy: IfNotPresent
# end::deployment[]

# tag::svc[]
---
apiVersion: v1
kind: Service
metadata:
  name: web-full-service
  namespace: devoxx
  labels:
    guilde: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: web-http
  selector:
    labels:
      guilde: web
      faction: server
# end::svc[]

# tag::ingress[]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-full-ingress
  namespace: devoxx
  labels:
    guilde: web
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    # tag::deleteannot[]
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.rule.type: PathPrefix
    # tag::canary[]
    traefik.ingress.kubernetes.io/service-weights: |
      web-service: 80%
      web-full-service: 20%
    # end::canary[]
    # end::deleteannot[]
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: web-full-service
      # tag::deletepath[]
      - path: /
        backend:
          serviceName: web-service
      # end::deletepath[]
# end::ingress[]
